Changes sonar